--- a/Logave/Base.lproj/Main.storyboard
+++ b/Logave/Base.lproj/Main.storyboard
@@ -441,11 +441,14 @@
                         <animations/>
                         <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
                         <color key="tintColor" red="0.0" green="0.55148237180000004" blue="0.097995965290000001" alpha="1" colorSpace="calibratedRGB"/>
-                        <searchBar key="tableHeaderView" contentMode="redraw" placeholder="Search for messages or users" id="JaL-Q3-tX9">
+                        <searchBar key="tableHeaderView" contentMode="redraw" placeholder="Search..." id="uDz-Fs-sHN">
                             <rect key="frame" x="0.0" y="64" width="600" height="44"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                             <animations/>
-                            <textInputTraits key="textInputTraits"/>
+                            <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="webSearch" returnKeyType="search"/>
+                            <connections>
+                                <outlet property="delegate" destination="aaX-Rb-zWy" id="KGb-D8-vVZ"/>
+                            </connections>
                         </searchBar>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="conversationCell" rowHeight="70" id="mQe-yr-icS" customClass="ConversationCell" customModule="Logave" customModuleProvider="target">
@@ -542,8 +545,20 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title=" Messages" id="Q1j-tp-ebI"/>
+                    <connections>
+                        <outlet property="searchDisplayController" destination="pHO-VA-wJQ" id="P8A-8u-zVl"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1Ns-hT-u1l" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <searchDisplayController id="pHO-VA-wJQ">
+                    <connections>
+                        <outlet property="delegate" destination="aaX-Rb-zWy" id="s5Q-30-hph"/>
+                        <outlet property="searchBar" destination="uDz-Fs-sHN" id="Cjr-Jw-WqQ"/>
+                        <outlet property="searchContentsController" destination="aaX-Rb-zWy" id="YsV-7E-lFa"/>
+                        <outlet property="searchResultsDataSource" destination="aaX-Rb-zWy" id="3f3-rw-zol"/>
+                        <outlet property="searchResultsDelegate" destination="aaX-Rb-zWy" id="9gT-dz-EKA"/>
+                    </connections>
+                </searchDisplayController>
             </objects>
             <point key="canvasLocation" x="-1352" y="-754"/>
         </scene>
