--- a/Logave/Base.lproj/Main.storyboard
+++ b/Logave/Base.lproj/Main.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9052" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="GiB-Zv-qSf">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9060" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="GiB-Zv-qSf">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9040"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
     </dependencies>
     <scenes>
         <!--Authorization-->
@@ -974,6 +974,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <animations/>
+                        <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="barTintColor" red="0.33581805409999999" green="0.60720960150000003" blue="0.82329727559999999" alpha="1" colorSpace="calibratedRGB"/>
                     </navigationBar>
                     <connections>
                         <segue destination="CCe-Er-aZe" kind="relationship" relationship="rootViewController" id="102-qj-4Pc"/>
@@ -1013,26 +1015,24 @@
                                 <rect key="frame" x="0.0" y="556" width="600" height="44"/>
                                 <animations/>
                                 <items>
+                                    <barButtonItem title="Locate" id="tH0-Qs-RFX"/>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="Sa0-0S-dVZ"/>
-                                    <barButtonItem style="plain" id="MZX-MS-kT4">
-                                        <segmentedControl key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bar" selectedSegmentIndex="0" id="kGN-eN-SXL">
-                                            <rect key="frame" x="239" y="7" width="121" height="30"/>
+                                    <barButtonItem style="plain" id="qwx-bU-4eh">
+                                        <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="556-IC-exa">
+                                            <rect key="frame" x="200" y="7" width="200" height="30"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <animations/>
-                                            <segments>
-                                                <segment title="Map"/>
-                                                <segment title="List"/>
-                                            </segments>
+                                            <state key="normal" title="Today ▾"/>
                                             <connections>
-                                                <action selector="changeView:" destination="CCe-Er-aZe" eventType="valueChanged" id="3gP-cu-FAv"/>
+                                                <action selector="showDatePicker:" destination="CCe-Er-aZe" eventType="touchUpInside" id="4NO-81-UdH"/>
                                             </connections>
-                                        </segmentedControl>
-                                        <connections>
-                                            <action selector="changeView:" destination="CCe-Er-aZe" id="tOi-Qh-6vb"/>
-                                        </connections>
+                                        </button>
                                     </barButtonItem>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="97T-8h-HEc"/>
+                                    <barButtonItem title="Options" id="GNU-pO-JVd"/>
                                 </items>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="barTintColor" red="0.33581805409999999" green="0.60720960150000003" blue="0.82329727559999999" alpha="1" colorSpace="calibratedRGB"/>
                             </toolbar>
                         </subviews>
                         <animations/>
@@ -1054,26 +1054,30 @@
                     <navigationItem key="navigationItem" id="yPB-xK-6Ip">
                         <nil key="title"/>
                         <barButtonItem key="backBarButtonItem" title="Back" id="rMY-Wc-o1Y"/>
-                        <button key="titleView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="556-IC-exa">
-                            <rect key="frame" x="200" y="7" width="200" height="30"/>
-                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            <animations/>
-                            <state key="normal" title="Today ▾"/>
+                        <barButtonItem key="leftBarButtonItem" title="Menu" id="Wdo-Sc-JX7">
                             <connections>
-                                <action selector="showDatePicker:" destination="CCe-Er-aZe" eventType="touchUpInside" id="4NO-81-UdH"/>
-                            </connections>
-                        </button>
-                        <barButtonItem key="rightBarButtonItem" systemItem="action" id="tef-qM-uOP">
-                            <connections>
-                                <action selector="showSettings:" destination="CCe-Er-aZe" id="0eA-GN-zmG"/>
+                                <action selector="showMenu:" destination="CCe-Er-aZe" id="pER-P0-Q8V"/>
                             </connections>
                         </barButtonItem>
+                        <segmentedControl key="titleView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bar" selectedSegmentIndex="0" id="yTz-NS-xDk">
+                            <rect key="frame" x="240" y="7" width="121" height="30"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <animations/>
+                            <segments>
+                                <segment title="Map"/>
+                                <segment title="List"/>
+                            </segments>
+                            <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <connections>
+                                <action selector="changeView:" destination="CCe-Er-aZe" eventType="valueChanged" id="p7h-c5-pee"/>
+                            </connections>
+                        </segmentedControl>
                     </navigationItem>
                     <connections>
                         <outlet property="mapView" destination="WbK-Bm-s9f" id="aka-fU-y1n"/>
                         <outlet property="ordersView" destination="xL4-Df-ZP7" id="VZF-92-TVU"/>
                         <outlet property="pickerButton" destination="556-IC-exa" id="IbN-8L-uyl"/>
-                        <outlet property="viewChooser" destination="kGN-eN-SXL" id="6iL-LW-zF2"/>
+                        <outlet property="viewChooser" destination="yTz-NS-xDk" id="5cV-1n-c3X"/>
                         <segue destination="mKt-bu-LKj" kind="show" identifier="toggleSettings" id="yPA-3i-xGZ"/>
                     </connections>
                 </viewController>
