Fresh Software from Aleksander Sivakow

--- a/Logave/Base.lproj/Main.storyboard
+++ b/Logave/Base.lproj/Main.storyboard
@@ -1302,8 +1302,8 @@
             <objects>
                 <viewController id="nal-BM-Xi7" customClass="MapController" customModule="Logave" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="Wyk-Ua-cog"/>
-                        <viewControllerLayoutGuide type="bottom" id="JPo-gg-WKt"/>
+                        <viewControllerLayoutGuide type="top" id="IVS-ac-aAr"/>
+                        <viewControllerLayoutGuide type="bottom" id="bvB-MZ-u3R"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="a37-ko-2xk">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
