--- a/Logave/Base.lproj/LaunchScreen.xib
+++ b/Logave/Base.lproj/LaunchScreen.xib
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9052" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9060" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9040"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -10,30 +10,20 @@
             <rect key="frame" x="0.0" y="0.0" width="480" height="480"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="  Copyright (c) 2015 Logave LLC. All rights reserved." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="8ie-xW-0ye">
-                    <rect key="frame" x="20" y="439" width="441" height="21"/>
-                    <animations/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                    <nil key="highlightedColor"/>
-                </label>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="menu" translatesAutoresizingMaskIntoConstraints="NO" id="nqV-GZ-3RL">
-                    <rect key="frame" x="120" y="92" width="240" height="240"/>
+                    <rect key="frame" x="165" y="165" width="150" height="150"/>
                     <animations/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="240" id="Svy-ai-WPK"/>
-                        <constraint firstAttribute="height" constant="240" id="VNQ-kg-swn"/>
+                        <constraint firstAttribute="width" constant="150" id="Svy-ai-WPK" userLabel="width = 150"/>
+                        <constraint firstAttribute="height" constant="150" id="VNQ-kg-swn"/>
                     </constraints>
                 </imageView>
             </subviews>
             <animations/>
-            <color key="backgroundColor" red="0.60000002379999995" green="0.60000002379999995" blue="0.60000002379999995" alpha="1" colorSpace="calibratedRGB"/>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstItem="nqV-GZ-3RL" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="4QX-dr-BVG"/>
-                <constraint firstItem="nqV-GZ-3RL" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="92" id="BVR-N6-Zgz"/>
-                <constraint firstAttribute="bottom" secondItem="8ie-xW-0ye" secondAttribute="bottom" constant="20" id="Kzo-t9-V3l"/>
-                <constraint firstItem="8ie-xW-0ye" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" symbolic="YES" id="MfP-vx-nX0"/>
-                <constraint firstAttribute="centerX" secondItem="8ie-xW-0ye" secondAttribute="centerX" id="ZEH-qu-HZ9"/>
+                <constraint firstItem="nqV-GZ-3RL" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="Z0H-uB-6wz"/>
+                <constraint firstItem="nqV-GZ-3RL" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="h1B-Mc-XqO"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
@@ -41,6 +31,6 @@
         </view>
     </objects>
     <resources>
-        <image name="menu" width="1024" height="1024"/>
+        <image name="menu" width="250" height="250"/>
     </resources>
 </document>
